Testing and fixed broken layout on screens smaller than 320px wide.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,7 +429,8 @@ body a:hover{
 
 /*--------------------------------------------------------media queries mobile screens*/
 
-@media screen and (min-width: 320px){
+
+@media screen and (min-width: 250px){
     .profile-pic{
         width: 0px;
         height: 0px;
@@ -522,7 +523,6 @@ body a:hover{
     }
     .contact-background{
         top: 650px;
-        left: -100;
         height: 300px;
         width: 300px;
     }
